...

private enum class AppTab(
    val label: String,
    val outlinedIcon: ImageVector,
    val filledIcon: ImageVector
) {
    TASKS("Задачи", Icons.Outlined.TaskAlt, Icons.Filled.TaskAlt),
    NOTES("Заметки", Icons.AutoMirrored.Outlined.Notes, Icons.AutoMirrored.Filled.Notes),
    SHOPPING("Покупки", Icons.Outlined.ShoppingCart, Icons.Filled.ShoppingCart)
}

@Composable
fun MainScreen(
    taskViewModel: TaskViewModel,
    notesViewModel: NotesViewModel,
...
